add DMR, add result files

--- a/DMC/DMC.ipynb
+++ b/DMC/DMC.ipynb
@@ -157,7 +157,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Здесь и далее код клеток с долго выполняющимися операциями закомментирован. Для удобства все промежуточные файлы лежат в репозитории. Если же Вы хотите перезаписать запомленные файлы, то раскомментируйте код, выделив и нажав ctrl+/, и запустите её."
+    "Здесь и далее код клеток с долго выполняющимися операциями закомментирован. Если Вы хотите перезаписать запомненные файлы, то раскомментируйте код, выделив и нажав ctrl+/, и запустите её."
    ]
   },
   {
